--- a/WebClient/wwwroot/index.html
+++ b/WebClient/wwwroot/index.html
@@ -30,6 +30,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="/js/drag.js"></script>
+    <script src="/js/check.js"></script>
 
 </body>
 
