--- a/WebClient/wwwroot/index.html
+++ b/WebClient/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -29,6 +29,9 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="/js/drag.js"></script>
+    <script src="/js/check.js"></script>
+
 </body>
 
 </html>
